# teraplate

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: release.yml
example/: render.py
example/templates/: index.html
examples/: render.py
examples/templates/: base.html  email.txt
pytera/: __init__.py  pytera.pyi
scripts/: release.sh
src/: lib.rs
tera_py/: __init__.py  tera_py.pyi
teraplate/: __init__.py  teraplate.pyi
