[package]
name = "pytera"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pytera"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28.2", features = ["extension-module"] }
tera = "1"
serde_json = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true
