[package]
name = "teraplate"
version = "0.0.4"
edition = "2024"
description = "A fast Tera template engine Python binding written in Rust"

[lib]
name = "teraplate"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.28.2"
tera = "1"
serde_json = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true
