[build-system]
requires = ["maturin>=1.13,<2.0"]
build-backend = "maturin"

[project]
name = "teraplate"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "."
module-name = "teraplate.teraplate"

[dependency-groups]
dev = [
    "maturin>=1.13.1",
    "ruff>=0.15.11",
    "ty>=0.0.32",
]
