[build-system]
requires = ["maturin>=1.13,<2.0"]
build-backend = "maturin"

[project]
name = "teraplate"
description = "A fast Tera template engine Python binding written in Rust"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "."
module-name = "teraplate.teraplate"

[dependency-groups]
dev = [
    "maturin>=1.13.1",
    "ruff>=0.15.11",
    "ty>=0.0.32",
]
